# foldiboy

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/cpu/: Cargo.toml
crates/cpu/src/: cpu.rs  execute.rs  lib.rs
crates/cpu/src/instruction/: decode.rs
crates/cpu/tests/: blargg.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  test_bus.rs
docs/: constraints.md  ideal.md  provability.md  testing.md
host/desktop/: Cargo.toml  README.md  build.sh
host/desktop/src/: audio.rs  main.rs
lib/: Cargo.toml  build.sh
lib/crates/apu/: Cargo.toml
lib/crates/apu/src/: envelope.rs  length.rs  lib.rs  mixer.rs  noise.rs  pulse.rs  registers.rs  sweep.rs  wave.rs
lib/crates/cpu/: Cargo.toml
lib/crates/cpu/src/: alu.rs  cpu.rs  execute.rs  registers.rs
lib/crates/cpu/tests/: blargg.rs  dmg_sound.rs  dmg_sound_diag.rs  opcode_profile.rs  samesuite.rs
lib/crates/memory/src/: bus.rs
lib/crates/ppu/: Cargo.toml
lib/crates/ppu/src/: lib.rs  oam.rs  vram.rs  (+2 more)
lib/crates/render/: Cargo.toml
lib/wit/: deps.toml  gameboy.wit
machine-docs/: ideal.md  provability.md  testing.md
roms/: README.md
sm83-zklean-extractor/: Cargo.toml  build.rs
sm83-zklean-extractor/package-template/: SM83.lean  Tests.lean  lakefile.toml
sm83-zklean-extractor/package-template/SM83/: BridgeTestDiag.lean  ConstraintProofs.lean  EndToEnd.lean  EndToEndDerived.lean  FullSoundness.lean  Refinement.lean  SemanticBridge.lean  Util.lean  ZmodBitVecBridge.lean
sm83-zklean-extractor/src/: bitvec_bridge.rs  constraints.rs  decode_gen.rs  instruction_proofs_gen.rs  instructions.rs  lean_fmt.rs  lib.rs  lookups.rs  main.rs  mle.rs  modules.rs  proofs_gen.rs  regfile_gen.rs  spec_gen.rs  tables.rs  tests_gen.rs  util.rs
(+15 files in other folders)
