[package]
name = "sm83-zklean-extractor"
version = "0.1.0"
edition = "2021"
description = "Extracts SM83 (Game Boy CPU) ALU operations into Lean4 code for the zkLean library"

[dependencies]
cpu = { path = "../lib/crates/cpu" }
memory = { path = "../lib/crates/memory" }

clap = { version = "4", features = ["derive"] }
build-fs-tree = "0.8.1"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
build-fs-tree = "0.8.1"
serde_yaml = "0.9"

[dev-dependencies]
proptest = "1.11.0"
